# riho-game

./: README.md
Blink/: .gitignore  main.c
KiCad-projects/Buzzer-game-client/: Buzzer-Client.kicad_prl  Buzzer-Client.kicad_pro  Buzzer-Client.kicad_sch
Master/: CMakeLists.txt  main.c
Master-PIO/: platformio.ini
Master-PIO/src/: main.cpp
Player/: CMakeLists.txt  main.c
Player-PIO/: platformio.ini
Player-PIO/src/: main.cpp
Server-py/: README.md  main.py
